assets/css/styles.css
/* ... */
.nav__logo {
  color: var(--first-color);
  font-weight: var(--font-medium);
  transition: 0.4s;
}

.nav__logo:hover {
  color: var(--first-color-alt);
}

.nav__menu {
  position: fixed;
  bottom: 1rem;
  background-color: hsla(var(--second-hue), 32%, 16%, 0.8);
  width: 90%;
  border-radius: 4rem;
  padding: 1rem 2.25rem;
  backdrop-filter: blur(10px);
  transition: 0.4s;
}

.nav__list {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav__link {
  color: var(--text-color);
  font-size: 1.25rem;
  padding: 0.4rem;
  font-weight: var(--font-medium);
  text-decoration: none;
  transition: 0.4s;
  display: flex;
  border-radius: 5rem;
}

/* Active link */
.active-link {
  background: linear-gradient(
    180deg,
    hsla(var(--first-hue), var(--sat), var(--lig), 0.5),
    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
  );
  box-shadow: 0 0 16px hsla(var(--first-hue), var(--sat), var(--lig), 0.4);
  border-radius: 5rem;

  color: var(--title-color);
}

/* Change background header */
.scroll-header {
  box-shadow: 0 4px 4px hsla(0, 0%, 4%, 0.3);
}

/*=============== HOME ===============*/
.home__container {
  position: relative;
  row-gap: 4.5rem;
  padding-top: 2rem;
}

.home__data {
  text-align: center;
}

.home__greeting,
.home__education {
  font-size: var(--small-font-size);
  font-weight: var(--font-medium);
}

.home__greeting {
  display: block;
  color: var(--title-color);
  margin-bottom: 0.25rem;
}

.home__education {
  color: var(--text-color);
  margin-bottom: 2.5rem;
}

.home__name {
  font-size: var(--biggest-font-size);
  color: var(--first-color);
}

.home__img {
  width: 160px;
}

.home__handle {
  justify-self: center;
  width: 190px;
  height: 293px;
  background: linear-gradient(
    180deg,
    hsla(var(--first-hue), var(--sat), var(--lig), 0.5),
    hsla(var(--first-hue), var(--sat), var(--lig), 0.1)
  );

  border-radius: 10rem 10rem 1rem 1rem;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  overflow: hidden;
}

.home__button {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.home__social,
.home__scroll {
  position: absolute;
}

.home__social {
  bottom: 4rem;
  left: 0;
  display: grid;
  row-gap: 0.5rem;
}

.home__social-link {
  width: max-content;
  background-color: var(--container-color);
  color: var(--first-color);
  padding: 0.25rem;
  border-radius: 0.5rem;
  display: flex;
  font-size: 1rem;
  transition: 0.4s;
}

.home__social-link:hover {
  background-color: var(--first-color);
  color: #ffffff;
}

.home__social::after {
  content: "";
  width: 32px;
  height: 1px;
  background-color: var(--first-color);
  transform: rotate(90deg) translate(16px, 4px);
}

.home__scroll {
  color: var(--first-color);
  right: -1.5rem;
  bottom: 4rem;
  display: grid;
  row-gap: 2.25rem;
  justify-items: center;
}

.home__scroll-icon {
  font-size: 1.25rem;
}

.home__scroll-name {
  font-size: var(--smaller-font-size);
  transform: rotate(-90deg);
}

/*=============== BUTTONS ===============*/
.button {
  display: inline-block;
  background-color: var(--first-color);
  color: var(--body-color);
  padding: 0.75rem 1rem;
  border-radius: 0.8rem;
  font-weight: var(--font-medium);
  transition: 0.4s;
  justify-content: center;
}

.button:hover {
  background-color: var(--first-color-alt);
  color: var(--body-color);
}

.button--ghost {
  background-color: transparent;
  color: var(--first-color);
  border: 1px solid var(--first-color);
}

/*=============== ABOUT ===============*/
.about__container {
  row-gap: 2.5rem;
}

.about__img {
  width: 220px;
  border-radius: 1.5rem;
  justify-self: center;
}

.about__data {
  text-align: center;
}

.about__info {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 0.5rem;
  margin-bottom: 2rem;
}

.about__box {
  background-color: var(--container-color);
  border-radius: 0.75rem;
  padding: 0.75rem 0.5rem;
}

.about__icon {
  font-size: 1.5rem;
  color: var(--first-color);
  margin-bottom: 0.5rem;
}

.about__title {
  font-size: var(--small-font-size);
}

.about__subtitle {
  font-size: var(--tiny-font-size);
}

.about__description {
  margin-bottom: 2rem;
}

/*=============== SKILLS ===============*/
.skills__container {
  row-gap: 2rem;
  padding-top: 1rem;
}

.skills__content {
  background-color: var(--container-color);
  padding: 1.5rem;
  border-radius: 1.25rem;
}

.skills__title {
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);
  color: var(--first-color);
  text-align: center;
  margin-bottom: 1.5rem;
}

.skills__box {
  display: flex;
  justify-content: center;
  column-gap: 2.5rem;
}

.skills__group {
  display: grid;
  align-content: flex-start;
  row-gap: 1rem;
}

.skills__data {
  display: flex;
  column-gap: 0.5rem;
}

.skills .bxs-badge-check {
  font-size: 1rem;
  color: var(--first-color);
}

.skills__name {
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);
  line-height: 18px;
}

.skills__level {
  font-size: var(--small-font-size);
}

/*=============== SERVICES ===============*/
.services__container {
  grid-template-columns: repeat(2, 1fr);
  gap: 1.5rem;
  padding-top: 1rem;
}

.services__card {
  background-color: var(--container-color);
  padding: 3rem 1.5rem 1.5em;
  border-radius: 1.25rem;
}

.services__title {
  font-size: var(--h3-font-size);
  margin-bottom: 2.5rem;
}

.services__button {
  color: var(--first-color);
  font-size: var(--small-font-size);
  display: flex;
  align-items: center;
  column-gap: 0.25rem;
  cursor: pointer;
}

.services__button:hover .services__icon {
  transform: translateX(0.25rem);
}

.services__icon {
  font-size: 1rem;
  transition: 0.4s;
}

/* Services modal */
.services__modal {
  position: fixed;
  inset: 0;
  background-color: hsl(var(--second-hue), 28%, 16%, 0.7);
  padding: 2rem 1rem;
  display: grid;
  place-items: center;
  transition: 0.4s;
  z-index: var(--z-modal);
  visibility: hidden;
  opacity: 0;
}
/* ... */

